<resources>
    <string name="app_name">BlogApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">New on this app? Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_txt">Sign Up</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="about_me">About Me...</string>
    <string name="save_info">Save Info</string>
    <string name="photo_description">Photo Description.</string>
    <string name="upload_photo">Upload photo</string>
    <string name="empty_container">Aun no se creo ningun post. Crea el primero!</string>
</resources>